@@ -4,6 +4,8 @@ dsm news!
  * check that any Sample.Labels match up, if none do then throw an error. Thanks to Madhura Davate for bringing this issue to my attention.
  * gamma option removed, since it now is not ignored by gam(). If using method="GCV.Cp" then gamma=1.4 should still be used (but generally we advise using REML rather than GCV for smoothing parameter selection)
  * dsm now requires mgcv version 1.8-23 or higher.
+ * dsm.var.prop (and dsm_varprop) now throw an error when there are no covariates in the detection function as it can't do anything useful
+
 
 # 2.2.15
  * when mexdolphins is loaded using data(), the data no longer need to be attach()ed
